--- a/app/templates/UserBase.html
+++ b/app/templates/UserBase.html
@@ -60,19 +60,19 @@
     {% endif %}
     {% endwith %}
     {% block content %}{% endblock %}
-    <!-- the block control statement to define 
-        the place where the derived templates 
-        can insert themselves. Blocks are given a unique name, 
-        which derived templates can reference 
+    <!-- the block control statement to define
+        the place where the derived templates
+        can insert themselves. Blocks are given a unique name,
+        which derived templates can reference
         when they provide their content. -->
-    
+
     <br>
-    <footer class="footer navbar-fixed-bottom ">
+    <!-- <footer class="footer navbar-fixed-bottom ">
         <div class="loc_footer">
             Designed by: ZHANG, ZHU, ZHOU
         </div>
-    </footer>
-   
+    </footer> -->
+
 
 </body>
 
