--- a/app/templates/paper.html
+++ b/app/templates/paper.html
@@ -112,7 +112,10 @@ body {font-family: Arial, Helvetica, sans-serif;}
   animation: spin 2s linear infinite;
   display:none
 }
-
+#chat_content{
+  height: 600px;
+  overflow-y: auto;
+}
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
@@ -208,7 +211,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
             let pdf_data = '';
             pdf_data = `<embed src="${url}" width="100%" height="100%" frameborder="0"></embed>`;
             $("#pdf").prepend(pdf_data);
-            this.style.visibility="hidden";
+            $("#pdf-bnt").css("display", "none");
         });
         function openForm() {
           document.getElementById("myForm").style.display = "block";
